Fix #6465 - Alignement issue on the customProPlanModal

--- a/src/sass/pages/dashboard/customProPlanModal.scss
+++ b/src/sass/pages/dashboard/customProPlanModal.scss
@@ -1,6 +1,7 @@
 .customProPlan-counter {
     display: block;
     margin-top: 20px;
+    padding: 0 10px;
 }
 
 // Context
